@@ -1,5 +1,5 @@
 Thanks to:
-    Petr Vanek whoes offer some improves
+    Petr Vanek whoes offer some improves and add the Windows support
     Andrew Gaydenko whoes help to fix a  bug with building in x86_64
     Vadim Kalinnikov whoes give a hosting
     Hoopoe whoes add a traditional chinese translation
